<RelativeLayout
    android:layout_width="match_parent"
    android:id="@+id/relStart_layout"
    android:layout_height="match_parent"
    android:gravity="left|top"
    android:orientation="vertical"
    android:weightSum="1"
    android:focusable="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="left|top"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/connectionButton">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:linksClickable="false"
            android:hint="@string/username_text"
            android:textSize="24dp"
            android:id="@+id/usernameField"
            android:inputType="text"
            android:imeOptions="actionNext"
            />

        <EditText
            android:layout_marginTop="50dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:linksClickable="false"
            android:hint="@string/password"
            android:textSize="24dp"
            android:id="@+id/passwordField"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:password="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_preferences"
            android:id="@+id/saveUserPref"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:text="@string/error_code"
            android:id="@+id/error_text"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.15"
            android:textColor="#fffff5ff" />

    </LinearLayout>

    <Button
        android:text="@string/connect_text"
        android:id="@+id/connectionButton"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/special_button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

