<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.chalmers.fleetspeak.structure.establish.BackFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AboutToDisconnect"
        android:id="@+id/textView2"
        android:textColor="#ffffffff"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/special_button_shape2"
        android:text="@string/yes"
        android:id="@+id/yesButton"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/special_button_shape2"
        android:text="@string/no"
        android:id="@+id/noButton"
        android:layout_alignTop="@+id/yesButton"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp" />
</RelativeLayout>
